--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="game.css">
   </head>
   <body>
     <h1>bacon.game</h1>
+    <div id="assignment">
+      <p class="description"></p>
+      <textarea class="code"></textarea>
   </body>
   <script src="bundle.js"></script>
 </html>
