--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <div id="assignment">
       <p class="description"></p>
       <textarea class="code"></textarea>
+      <button class="run">RUN</button>
   </body>
   <script src="bundle.js"></script>
 </html>
