--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
       <p class="description"></p>
       <textarea class="code"></textarea>
       <button class="run">RUN</button>
+      <span class="result"></span>
   </body>
   <script src="bundle.js"></script>
 </html>
