now with 3 assignments

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,11 @@
   <body>
     <h1>bacon.game</h1>
     <div id="assignment">
-      <p class="description"></p>
+      <div class="heading">
+        <a class="previous">&lt;&lt; previous</a>
+        <span class="description"></span>
+        <a class="next">next &gt;&gt;</a>
+      </div>
       <textarea class="code"></textarea>
       <button class="run">RUN</button>
       <span class="result"></span>
