--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,9 @@
     <div id="assignment">
       <div class="heading">
         <a class="previous">&lt;&lt; previous</a>
-        <span class="description"></span>
+        Assignment <span class="number"></span>
         <a class="next">next &gt;&gt;</a>
+        <div class="description"></div>
       </div>
       <textarea class="code"></textarea>
       <button class="run">RUN</button>
