--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="game.css">
   </head>
   <body>
-    <h1>bacon.game</h1>
+    <h1>Learn Your Bacon</h1>
     <div id="assignment">
       <div class="heading">
         <a class="previous">&lt;&lt; previous</a>
