--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,16 @@
     <h1>Learn Your Bacon</h1>
     <div id="assignment">
       <div class="heading">
-        <a class="previous">&lt;&lt; previous</a>
-        Assignment <span class="number"></span>
-        <a class="next">next &gt;&gt;</a>
+        Assignment <span class="number"></span>:
         <div class="description"></div>
       </div>
       <textarea class="code"></textarea>
       <button class="run">RUN</button>
       <span class="result"></span>
+      <div class="navi">
+        <a class="previous">&lt;&lt; previous</a>
+        <a class="next">next &gt;&gt;</a>
+      </div>
   </body>
   <script src="bundle.js"></script>
 </html>
