--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <h1>Learn Your Bacon</h1>
     <div id="assignment">
       <div class="heading">
-        Assignment <span class="number"></span>:
+        <h2>Assignment <span class="number"></span>:</h2>
         <div class="description"></div>
       </div>
       <textarea class="code"></textarea>
