--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,10 @@
   </head>
   <body>
     <h1>Learn Your Bacon</h1>
+    <div id="info">by @raimohanska 
+      - more info on 
+      <a href="https://github.com/raimohanska/bacon.game">Github</a>
+    </div>
     <div id="assignment">
       <div class="heading">
         <h2>Assignment <span class="number"></span>:</h2>
