spiking on visualization. currently lists active streams

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,9 @@
         <a class="previous">&lt;&lt; previous</a>
         <a class="next">next &gt;&gt;</a>
       </div>
+    </div>
+    <div id="visualizer">
+    </div>
   </body>
   <script src="bundle.js"></script>
 </html>
