show result on the right

--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,16 @@
       </div>
       <textarea class="code"></textarea>
       <button class="run">RUN</button>
-      <span class="result"></span>
       <div class="navi">
         <a class="previous">&lt;&lt; previous</a>
         <a class="next">next &gt;&gt;</a>
       </div>
     </div>
-    <div id="visualizer">
+    <div id="output">
+      <div id="visualizer">
+      </div>
+      <div class="result">
+      </div>
     </div>
   </body>
   <script src="bundle.js"></script>
