--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,10 @@
           <div class="heading">
             <h2>Assignment <span class="number"></span>:</h2>
             <div class="description"></div>
-            <a class="run">run</a>
+            <div id="runner">
+              <a class="run">run</a>
+              <span id="result"></span>
+            </div>
           </div>
           <textarea class="code" id="code"></textarea>
           <div class="navi">
@@ -25,8 +28,6 @@
         </div>
         <div id="output">
           <div id="visualizer">
-          </div>
-          <div class="result">
           </div>
         </div>
       </div>
