--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
             <h2>Assignment <span class="number"></span>:</h2>
             <div class="description"></div>
             <div id="runner">
-              <a class="run">run</a>
-              <span id="result"></span>
+              <a class="run disabled">run</a>
+              <span id="result" class="none">None</span>
             </div>
           </div>
           <textarea class="code" id="code"></textarea>
