--- a/app/index.html
+++ b/app/index.html
@@ -13,22 +13,24 @@
       <div id="learn">
         <div id="assignment">
           <div class="heading">
-            <h2>Assignment <span class="number"></span>:</h2>
+            <h2>Assignment <span class="number"></span></h2>
             <div class="description"></div>
             <div id="runner">
               <a class="run disabled">run</a>
               <span id="result" class="none">None</span>
             </div>
           </div>
+        </div>
+        <div id="code-container">
           <textarea class="code" id="code"></textarea>
-          <div class="navi">
-            <a class="previous">&lt; previous</a>
-            <a class="next">next &gt;</a>
-          </div>
         </div>
         <div id="output">
           <div id="visualizer">
           </div>
+        </div>
+        <div class="navi">
+          <a class="previous">&lt; previous</a>
+          <a class="next">next &gt;</a>
         </div>
       </div>
     </div>
