--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,11 @@
     <link rel="stylesheet" type="text/css" href="game.css">
     <link rel="stylesheet" type="text/css" href="codemirror/lib/codemirror.css">
     <link rel="stylesheet" type="text/css" href="codemirror/theme/solarized.css">
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="content">
-      <h1>Learn Bacon
+      <h1>Learn Bacon.js
         <a href="https://github.com/raimohanska/bacon.game">src</a>
       </h1>
       <div id="learn">
