--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,14 @@
             <div class="description"></div>
             <div id="runner">
               <a class="run disabled">run</a>
-              <span id="result" class="none">None</span>
+              <span id="result" class="none">
+                <span class="text">None</span>
+                <span class="tip">
+                  <span class="tip-text">
+                  Hallo
+                  </span>
+                </span>
+              </span>
             </div>
           </div>
         </div>
