--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="content">
       <h1>Learn Bacon.js
-        <a href="https://github.com/raimohanska/bacon.game">src</a>
+        <a href="https://github.com/raimohanska/learn-bacon">src</a>
       </h1>
       <div id="learn">
         <div id="assignment">
