--- a/app/index.html
+++ b/app/index.html
@@ -45,5 +45,6 @@
   </body>
   <script src="codemirror/lib/codemirror.js"></script>
   <script src="codemirror/mode/javascript/javascript.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
   <script src="bundle.js"></script>
 </html>
