add "show solution" button

--- a/app/index.html
+++ b/app/index.html
@@ -21,10 +21,9 @@
               <span id="result" class="none">
                 <span class="text">None</span>
                 <span class="tip">
-                  <span class="tip-text">
-                  Hallo
-                  </span>
+                  <span class="tip-text"></span>
                 </span>
+                <span class="cheat" title="Show solution"></span>
               </span>
             </div>
           </div>
